# nlp-project

./: Final_m2 (1).ipynb  Final_m2 (2).ipynb  Final_m2.ipynb  README.md  milestone_1.ipynb  requirements.txt
Podcasts/Awel Marra - أول مرة/cleaned_transcripts/: ؟(Date❤️) بودكاست أول مرة # 001 - إزاي نتصرف في أول مرة.txt  ازاي تكتشف ال Red flags🚩.txt  الحلقه صفر - بودكاست أول مرة - أول مرة اتقابلنا.txt  الوحده_ و كيف تحولها الى قوة و سعاده.txt  بودكاست أول مرة # 002 - أول مرة اتخانت.txt  بودكاست أول مرة # 003 - اول مره تخسر صاحب عمرك.txt  بودكاست أول مرة # 004 - ازاي نتصرف في الغربه؟.txt  بودكاست أول مرة # 006 - أول مرة تفكر في الجواز ؟.txt  بودكاست أول مرة # 007 - أول مرة ليك تقول لأ.txt  بودكاست أول مرة # 008 - حلقة العيد عن صناعة المحتوى🤩.txt  بودكاست أول مرة # 009 - إول مرة تطلب مساعدة من حد؟.txt
Podcasts/FoodCast/cleaned_transcripts/: ازاي تفتح مطعم ؟ - من هو الشيف محمد صلاح ملاك اللحمة ؟ - Foodcast 5.txt  خسر في ٥ مطاعم وبدا من الصفر قبل نجاح مطعم ( Maine ماين ) - Foodcast 15.txt  خسرو اكثر من ٤ مليون و للاسباب ديه اوعى تفتح مطعم - Foodcast 17.txt  دكتور اسنان الصبح و فوودبلوجر بليل مع عمرو الهادي - Foodcast 7.txt  رحلة منعش لاكتشاف نفسه من دكتور اسنان الى مصور الى يوتيوبر - Foodcast 10.txt  قصة حلم عمر عربي و نجاحه الرهيب في فيديوهات الطبخ - Foodcast 4.txt  قصة مطعم المحمدي الذي يقوده دكتور جراح - Foodcast 14.txt  قصة مطعم زين الشام - من اقوي مطاعم الشاورما في مصر- Foodcast 16.txt  (+8 more)
milestone 3/: db_test.py  downloading_set.py  eval.py  frontend.py  main.py  model_evaluation_results.csv  pyproject.toml
milestone 3/narrativeqa_1000/: dataset_info.json  state.json
(+127 files in other folders)
